--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/132/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/132/index.mdx
@@ -60,13 +60,15 @@ Voir aussi l'article [Introducing Content Collections: Type-Safe Markdown in Ast
 
 ---
 
+[![Remix 1.11](/emails/issues/132/remix0.11.jpg)](https://github.com/remix-run/remix/releases/tag/remix%401.11.0)
+
 **[Remix 1.11](https://github.com/remix-run/remix/releases/tag/remix%401.11.0)**
 
 Une belle release Remix avec en nouveautés principales:
 
-- `defer` + `<Await>` pour initier une réponse streamée dans laquelle certaines réponses du loader peuvent être affichées plus tard.
+- `defer` + `<Await>` pour initier une réponse streamée. Le loader retourne des promesses qui peuvent être résolues plus tard coté client.
 - [Route Convention v2](https://remix.run/docs/en/v1/file-conventions/route-files-v2): une nouvelle convention (flat routes) qu'on peut activer dès maintenant et qui deviendra la convention par défaut sur la v2.
-- Support expérimental de CSS imports, CSS Modules, Vanilla Extract
+- Support expérimental de CSS imports, CSS Modules, Vanilla Extract.
 
 ---
 
