--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/132/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/132/index.mdx
@@ -1,10 +1,9 @@
 ---
 slug: /132
-title: "React Hebdo #132: ..."
+title: "React Hebdo #132: Astro, Remix, Server Components, useGlobalState, Next.js, Redwood, Expo Router, Expo Image, Android Widgets..."
 authors: [slorber]
 date: 01-25-2023
 image: /img/TWIR_POST.png
-unlisted: true
 ---
 
 Salut à tous !
@@ -80,10 +79,11 @@ Une belle release Remix avec en nouveautés principales:
 - 🐦 ["If you use React, you should be using a React framework"](https://twitter.com/acdlite/status/1617611126514266112): Andrew Clark donne de bonnes raisons d'utiliser un framework. Si vous n'en utilisez pas, vous finissez par en créer un pas terrible vous même.
 - 📜 [useGlobalState - Sharing state between React components without context or fancy libraries](https://yoavik.com/snippets/use-global-state): propose de créer sa propre abstraction de global state, sans avoir besoin d'utiliser des providers.
 - 📜 [What I Like About Astro](https://www.macarthur.me/posts/what-i-like-about-astro): comparaison intéressante avec Gatsby ou Next.js sur le sourcing de données, les intégrations (RSS, sitemap...). Avec Astro, il est difficile d'avoir un site lent.
-- 📜 [The building blocks of great docs](https://www.mux.com/blog/the-building-blocks-of-great-docs): migration en cours d'une documentation technique vers Next.13. L'usage de Server Components apporte beaucoup de bénéfices sur un site de contenu assez statique.
+- 📜 [The building blocks of great docs](https://www.mux.com/blog/the-building-blocks-of-great-docs): migration en cours d'une documentation technique vers Next.js 13. L'usage de Server Components apporte beaucoup de bénéfices sur un site de contenu assez statique.
 - 📜 [Improving readability with React Wrap Balancer](https://vercel.com/blog/react-wrap-balancer): détaille le fonctionnement interne de React Wrap Balancer qui permet d'équilibrer le texte des titres (feature CSS manquante) sans produire layout shifts.
 - 📜 [Things I want to see in JavaScript and Frontend development in 2023](https://paularmstrong.dev/blog/2023/01/20/javascript-and-frontend-things-to-see-in-2023/): des prédictions intéressantes et une critique piquante sur React 🔥
 - 📜 [Use Remix as a SPA only](https://sergiodxa.com/articles/use-remix-as-a-spa-only): usage d'un composant `<ClientOnly>`.
+- 📜 [Gatsby 5, TypeScript, and Generated GraphQL Types: A Walkthrough](https://www.gatsbyjs.com/blog/gatsby-5-typescript-and-generated-graphql-types-a-walkthrough/)
 - 📜 [Modals with React Router 6 and Remix](https://dev.to/infoxicator/modals-with-react-router-6-and-remix-1e35)
 - 📜 [Why React Router is excellent for Micro-Frontends](https://dev.to/infoxicator/why-react-router-is-excellent-for-micro-frontends-2a21)
 - 📜 [useAsyncEffect: The Missing React Hook](https://marmelab.com/blog/2023/01/11/use-async-effect-react.html)
