--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/132/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/132/index.mdx
@@ -14,7 +14,7 @@ React-Native n'est pas en reste avec Expo Router en release candidate, Expo Imag
 
 J'ai été invité du show [Learn With Jason - Create and deploy a documentation website](https://www.learnwithjason.dev/create-and-deploy-a-documentation-website?utm_source=thisweekinreact) dans lequel Jason fait ses premiers pas sur Docusaurus.
 
-Je vous propose de découvrir la newsletter [ES.next News](http://esnextnews.com/?utm_source=thisweekinreact), une bonne source d'information pour se tenir à jour sur les évolutions du langage JavaScript et des outils comme Bun ou ESLint.
+Je vous propose de découvrir la newsletter [ES.next News](http://esnextnews.com/?utm_source=thisweekinreact), une bonne source d'information pour se tenir à jour sur les évolutions du langage JavaScript et des outils comme ESLint, Babel, Prettier, Bun...
 
 <!-- truncate -->
 
@@ -96,7 +96,7 @@ Une belle release Remix avec en nouveautés principales:
 - 👀 [Remix PR - add built-in PostCSS and Tailwind support](https://github.com/remix-run/remix/pull/5229)
 - 👀 [XState PR - createProvider](https://twitter.com/DavidKPiano/status/1617537783018422273)
 - 👀 [React docs PR - Replace Create React App recommendation with Vite](https://github.com/reactjs/reactjs.org/pull/5487): une PR qui fait polémique cette semaine
-- 📦 [Bright - React Server Component for syntax highlighting](https://github.com/code-hike/bright): package prometteur en développement pour le syntax highlighting. Dans un contexte Node.js/server, on peut faire tourner du code plus lourd comme parser un AST plutôt que d'utiliser des Regexp (Prism).
+- 📦 [Bright - React Server Component for syntax highlighting](https://github.com/code-hike/bright): package prometteur en développement pour le syntax highlighting. Dans un contexte Node.js/server, on peut faire tourner du code plus lourd comme parser un AST plutôt que d'utiliser des regexp (Prism).
 - 📦 [Redwood 4.0 RC](https://twitter.com/RedwoodJS/status/1616002999729389568): nouvelle API Auth, GraphQL Yoga v3, GraphQL Armor, Node.js 16/18...
 - 📦 [shadcdn/ui - Beautifully designed components built with Radix UI and Tailwind CSS](https://twitter.com/shadcn/status/1617916719242293248)
 - 📦 [next-mdx-remote 4.3 - Server Components Support (experimental)](https://github.com/hashicorp/next-mdx-remote/releases/tag/v4.3.0)
@@ -120,7 +120,7 @@ Le plus intéressant pour moi: le support universel. La navigation est basée su
 ---
 
 - 👀 [Expo-Image in beta](https://twitter.com/JI/status/1616337848558551041): le nouveau composant image d'Expo passe en beta. Performant, cross-platform (web/mobile), nombreux formats, placeholders, object-fit... La [doc](https://docs.expo.dev/versions/unversioned/sdk/image/) est disponible.
-- 📖 [Maestro Guides - React-Native](https://maestro.mobile.dev/platform-support/react-native): le framework de test e2e propose maintenant une page de doc React-Native
+- 📖 [Maestro Guides - React-Native](https://maestro.mobile.dev/platform-support/react-native): le framework de test e2e propose maintenant une page de doc React-Native.
 - 📦 [React-Native-Android-Widget](https://saleksovski.github.io/react-native-android-widget/): nouveau package qui permet de créer des widgets Android, via des primitives dédiées. Dispose d'un système de preview des widgets. Facile à utiliser dans Expo (Config Plugin).
 - 📦 [Moti 0.22](https://twitter.com/FernandoTheRojo/status/1616583066054545408): un fix qui apporte le support Hermes.
 - 📦 [Metro 0.74](https://github.com/facebook/metro/releases/tag/v0.74.0): de bonnes améliorations de performance.
