--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/133/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/133/index.mdx
@@ -9,11 +9,7 @@ unlisted: true
 
 Salut à tous !
 
-RNC conf
-
-Semaphore podcast
-
-CSS Animation Weekly
+Une conférence **[React-Native-Connection](https://reactnativeconnection.io/)** vient d'être annoncée à Paris le 1er Juin. Je vais participer à la sélection des talks.
 
 <Todo />
 
@@ -95,7 +91,7 @@ Ponicode (CircleCI) est un partenaire de code basé sur une IA. Ils recrutent un
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- 👥 [React-Native-Connection](https://reactnativeconnection.io/): nouvelle conférence React-Native à Paris
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
