--- a/website/newsletter/133/index.mdx
+++ b/website/newsletter/133/index.mdx
@@ -9,13 +9,9 @@ unlisted: true
 
 Hi everyone!
 
-RNC conf
+Check out **[CSS Animation Weekly](https://weekly.cssanimation.rocks/?utm_source=thisweekinreact)**, a great resource for creative CSS developers looking for cool inspiration.
 
-Semaphore podcast
-
-CSS Animation Weekly
-
-<Todo />
+If you are into Docusaurus, I was recently invited to the [Semaphore podcast to talk about it](https://semaphoreci.com/blog/sebastien-lorber-docusaurus).
 
 <!-- truncate -->
 
